[gd_scene load_steps=16 format=2]

[ext_resource path="res://titlescreen/SelectionScreen.gd" type="Script" id=1]
[ext_resource path="res://fonts/LuckiestGuy.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/PrStart.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://titlescreen/ReturnButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://titlescreen/run_george_custom_v2_opti.png" type="Texture" id=5]
[ext_resource path="res://titlescreen/whiteCircle.png" type="Texture" id=6]
[ext_resource path="res://titlescreen/run_betty_custom_opti.png" type="Texture" id=7]
[ext_resource path="res://areas/fadeIn.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
extra_spacing_bottom = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 18
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Animation" id=6]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("circleMale:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.47, 0.47 ), Vector2( 0.5, 0.5 ), Vector2( 0.55, 0.55 ) ]
}

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="Animation" id=8]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("circleFemale:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.485, 0.485 ), Vector2( 0.525, 0.525 ), Vector2( 0.57, 0.57 ) ]
}

[node name="SelectionScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorBlue" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.129412, 0.32549, 1 )

[node name="ColorOrange" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.556863, 0.301961, 1 )

[node name="mainCont" type="MarginContainer" parent="."]
margin_left = 31.208
margin_top = 23.0
margin_right = 677.208
margin_bottom = 376.0

[node name="titleselection" type="VBoxContainer" parent="mainCont"]
margin_right = 646.0
margin_bottom = 353.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Labelselect" type="Label" parent="mainCont/titleselection"]
margin_right = 646.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 5
text = "Select your apprentice"
align = 1
uppercase = true

[node name="selectplay" type="VBoxContainer" parent="mainCont"]
margin_right = 646.0
size_flags_vertical = 0

[node name="Spriteplay" type="Sprite" parent="mainCont/selectplay"]
position = Vector2( 301.81, 322.863 )

[node name="Buttontoplay" type="Button" parent="mainCont/selectplay/Spriteplay"]
margin_left = -43.018
margin_top = -10.7598
margin_right = 95.9824
margin_bottom = 37.2402

[node name="play" type="Label" parent="mainCont/selectplay/Spriteplay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -43.018
margin_top = -10.7598
margin_right = 94.982
margin_bottom = 35.2402
custom_fonts/font = SubResource( 3 )
text = "play"
align = 1
valign = 1
uppercase = true

[node name="Spritereturn" type="Sprite" parent="mainCont/selectplay"]
__meta__ = {
"_edit_group_": true
}

[node name="ReturnButton" parent="mainCont/selectplay/Spritereturn" instance=ExtResource( 4 )]
margin_left = -28.0
margin_top = -24.0
margin_right = 67.0
margin_bottom = 51.0
custom_styles/focus = SubResource( 4 )

[node name="sndpart" type="HBoxContainer" parent="mainCont"]
margin_right = 646.0
size_flags_vertical = 0

[node name="selection1" type="HBoxContainer" parent="mainCont/sndpart"]
margin_right = 321.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="male" type="Sprite" parent="mainCont/sndpart/selection1"]
show_behind_parent = true
position = Vector2( 161.569, 179.301 )
scale = Vector2( 0.442674, 0.442674 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="mainCont/sndpart/selection1/male"]
margin_right = 40.0
margin_bottom = 14.0

[node name="ButtonMale" type="Button" parent="mainCont/sndpart/selection1/male"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -214.0
margin_top = -206.0
margin_right = 240.0
margin_bottom = 250.0
rect_scale = Vector2( 0.4, 0.4 )
custom_styles/focus = SubResource( 5 )
flat = true

[node name="circleMale" type="Sprite" parent="mainCont/sndpart/selection1"]
position = Vector2( 160.936, 181.323 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 6 )

[node name="animMale" type="AnimationPlayer" parent="mainCont/sndpart/selection1"]
anims/animCircle1 = SubResource( 6 )

[node name="selection2" type="HBoxContainer" parent="mainCont/sndpart"]
margin_left = 325.0
margin_right = 646.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="female" type="Sprite" parent="mainCont/sndpart/selection2"]
position = Vector2( 156.582, 178.652 )
scale = Vector2( 0.465544, 0.457952 )
texture = ExtResource( 7 )
flip_h = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="mainCont/sndpart/selection2/female"]
margin_right = 40.0
margin_bottom = 14.0

[node name="ButtonFemale" type="Button" parent="mainCont/sndpart/selection2/female"]
margin_left = -217.0
margin_top = -211.0
margin_right = 875.0
margin_bottom = 872.0
rect_scale = Vector2( 0.4, 0.4 )
custom_styles/focus = SubResource( 7 )
flat = true

[node name="circleFemale" type="Sprite" parent="mainCont/sndpart/selection2"]
position = Vector2( 157.035, 181.402 )
scale = Vector2( 0.485, 0.485 )
texture = ExtResource( 6 )

[node name="AnimFemale" type="AnimationPlayer" parent="mainCont/sndpart/selection2"]
anims/animTurnFemale = SubResource( 8 )

[node name="fadeIn" parent="." instance=ExtResource( 8 )]
visible = false
[connection signal="pressed" from="mainCont/selectplay/Spriteplay/Buttontoplay" to="." method="_on_Buttontoplay_pressed"]
[connection signal="pressed" from="mainCont/selectplay/Spritereturn/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="mainCont/sndpart/selection1/male/ButtonMale" to="." method="_on_ButtonMale_pressed"]
[connection signal="pressed" from="mainCont/sndpart/selection2/female/ButtonFemale" to="." method="_on_ButtonFemale_pressed"]
[connection signal="fadeIn_finished" from="fadeIn" to="." method="_on_fadeIn_fadeIn_finished"]
